<resources>
    <string name="app_name">TEducationAndroidHW1</string>
    <string name="preview_joke_category">logical answer</string>
    <string name="preview_joke_question">What does Santa suffer from if he gets stuck in a chimney?</string>
    <string name="preview_joke_answer">Claustrophobia!</string>
    <string name="description_add_joke">add joke</string>
    <string name="btn_add_joke">Add</string>
    <string name="btn_cancel">Cancel</string>
    <string name="category">category</string>
    <string name="question">question</string>
    <string name="answer">answer</string>
    <string name="empty_fields">Please fill in all fields!</string>
    <string name="empty_list">Jokes left the chat, add a new one!</string>
    <string name="joke_type_local">Local</string>
    <string name="joke_type_remote">Remote</string>
    <string name="jokes_loaded_from_cache_message">Internet problems, jokes loaded from cache!</string>
    <string name="empty_cache_message">Internet problems, try again later!</string>
</resources>